# AlgorithmicComputerScience

./: .gitignore  README.md
akiso/: README.md
akiso/list1/: Dockerfile
akiso/list1/src/: gcd.h
akiso/list2/: division.mas  stack.mas  stack_factorial.mas
akiso/list3/: task7.sh
akiso/list4/: custom_ps.sh  file_duplicate_searcher.sh  rest_api.sh  system_info.sh
akiso/list5/: bash_launcher.c
akiso/list5/lsh/: command_execution.c  lsh.c  (+3 more)
akiso/list7/: functions.asm
bdizi/: README.md
bdizi/list1/: queries.sql
bdizi/list3/: queries.sql
bdizi/list5/: app.js  database.js  package-lock.json
mpis/: README.md
mpis/list1/: main.py
mpis/list2/: main.cpp  main.py  plot.gnu
sem3/bdizi/: README.md
sem4/aisd/: README.md
sem4/bk/: README.md
sem4/jpp/: README.md
sem4/jpp/list1/libraryC/: CMakeLists.txt  mathLib.c  mathLib.h
sem4/jpp/list1/libraryC/tests/: testDiophantine.c  testFactorial.c  testGcd.c  testSolveDiophantineEquation.c
sem4/pl/: README.md
sem4/ts/: README.md
sem5/aod/: README.md
sem5/aod/list1/: .gitignore  CMakeLists.txt  Sprawozdanie.tex
sem5/aod/list1/src/: Graph.cpp  Graph.hpp  graphAlgorithms.cpp  graphAlgorithms.hpp  graphHelpers.cpp  graphHelpers.hpp  timeMeasurer.cpp
sem5/aod/list1/src/presentations/: presentTask1.cpp  presentTask2.cpp  presentTask3.cpp  presentTask4.cpp
sem5/aod/list1/testCases/: README.txt
sem5/aod/list1/testCases/2/: g2a-1.txt  g2a-2.txt  g2a-3.txt  g2a-4.txt  g2b-1.txt  g2b-2.txt  g2b-3.txt  g2b-4.txt
sem5/aod/list1/testCases/3/: g3-1.txt  g3-2.txt  g3-3.txt  g3-4.txt  g3-5.txt
sem5/aod/list1/testCases/4/: d4a-1.txt  d4a-2.txt  d4a-3.txt  d4a-4.txt  d4b-1.txt  d4b-2.txt  d4b-3.txt  d4b-4.txt  u4a-1.txt  u4a-2.txt  u4a-3.txt  u4a-4.txt  u4a-5.txt  u4b-1.txt  u4b-2.txt  u4b-3.txt  u4b-4.txt  u4b-5.txt
sem5/aod/list3/code/: .gitignore  CMakeLists.txt  README.md  generate_plots.py
sem5/aod/list3/code/src/: AlgorithmRunner.cpp  AlgorithmRunner.hpp  CommandLineParser.cpp  CommandLineParser.hpp  DijkstraAlgorithms.cpp  DijkstraAlgorithms.hpp  Graph.cpp  Graph.hpp  enums.cpp  enums.hpp  runAlgorithm.cpp  runExperiment.cpp  testDijkstraAlgorithms.cpp
sem5/jftt/: README.md
sem5/on/: README.md
sem5/sp/: README.md
sem6/pf/: README.md
sem6/pw/: README.md
sem6/sw/: README.md
sem6/wsi/: README.md
sem6/www/: README.md
sem7/kkd/: README.md
sem7/mwo/: README.md
tp/: README.md
tp/list2/: classDiagram.plantuml  useCaseDiagram.plantuml
(+488 files in other folders)
